--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,3 +79,28 @@ a:focus {
   color: var(--on-background);
   border-bottom: 3px solid;
 }
+
+/* Home Section */
+.title-group {
+  text-align: center;
+}
+
+/* About Section */
+.about-container {
+  display: flex;
+}
+
+img {
+  height: 18rem;
+  width: 18rem;
+}
+
+.image-container {
+  border: 1px solid var(--secondary-color);
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin-right: 25px;
+  width: auto;
+  background: var(--background);
+  box-shadow: var(--box-shadow);
+}
